--- a/page1.html
+++ b/page1.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Page 1</title>
 </head>
+
 <body>
-  You are on page 1
+  <p>You are on page 1</p>
 </body>
+
 </html>
