--- a/page2.html
+++ b/page2.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Page 2</title>
 </head>
+
 <body>
-  You are on page 2, honey!
-  Goodbye :)
+  <p>You are on page 2, honey!
+    Goodbye :)
+  </p>
 </body>
+
 </html>
