--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <body>
   Hi Ali Radmanesh!
+  <br><a href="page1.html">1</a>
+  <br><a href="page2.html">2</a>
+  <br><a href="page3.html">3</a>
 </body>
 
 </html>
